[gd_scene load_steps=2 format=2]

[ext_resource path="res://terminal.gd" type="Script" id=1]

[node name="terminal" type="Control"]
margin_left = 2.0
margin_top = 3.0
margin_right = 1024.0
margin_bottom = 603.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -3.0
margin_top = -2.0
margin_right = 1023.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 5.93683
margin_top = 13.1615
margin_right = 142.937
margin_bottom = 56.1615
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.258824, 0.0392157, 0.0392157, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "                  
	    LINUX TERMINAL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 965.0
margin_top = 18.0
margin_right = 999.0
margin_bottom = 48.0
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 15.0
margin_top = 62.3241
margin_right = 1001.0
margin_bottom = 533.324
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_left = 9.0
margin_top = 13.0
margin_right = 973.0
margin_bottom = 458.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineaComandos" type="Panel" parent="."]
margin_left = 16.0
margin_top = 543.0
margin_right = 999.0
margin_bottom = 583.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="LineaComandos"]
margin_left = 36.0
margin_top = 7.0
margin_right = 976.0
margin_bottom = 34.0
text = " "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LineaComandos"]
margin_left = 9.70001
margin_top = 13.65
margin_right = 43.7
margin_bottom = 44.65
text = ">>
"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="text_entered" from="LineaComandos/LineEdit" to="." method="_on_LineEdit_text_entered"]
